Fix Threats to Press 100 Percent Background Image Height Causing Section to be too Large

--- a/_scss/bbg/pages/_page-home.scss
+++ b/_scss/bbg/pages/_page-home.scss
@@ -21,7 +21,7 @@
 	background-position: left;
 	background-size: contain;
 	background-color: #222222;
-	height: 100%;
+	// height: 100%;
 	margin-bottom: 7.5rem;
 
 	.outer-container {margin-bottom: 0;}
