--- a/style.css
+++ b/style.css
@@ -6413,7 +6413,6 @@ div.banner_readmore h6 a:visited {
   background-position: left;
   background-size: contain;
   background-color: #222222;
-  height: 100%;
   margin-bottom: 7.5rem; }
   #homepage-threats .outer-container {
     margin-bottom: 0; }
